# audience-discovery

./: .gitignore  README.md  pyproject.toml
config/: categories.yaml  scoring.yaml
outputs/: leads_raw.csv  leads_review_queue.csv  leads_scored.csv
src/audience_discovery/: __init__.py  config.py  main.py  models.py
src/audience_discovery/ai/: __init__.py  classify.py  scoring.py
src/audience_discovery/crawl/: __init__.py  extract.py  fetcher.py  robots.py
src/audience_discovery/export/: __init__.py  csv_exporter.py
src/audience_discovery/search/: base.py  mock_provider.py  serpapi_provider.py  youtube_provider.py
src/audience_discovery/storage/: __init__.py  db.py
tests/: test_cli.py  test_config.py  test_export.py  test_extract.py  test_scoring.py  test_search.py  test_storage.py
